--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -62,7 +62,8 @@
 %start abstract
 \begin{abstract}
 
-Cloud offers high computational resources, scalability, as well as easy to access. 
+Cloud computing offers high computational resources, scalability, as well as
+ease of access.
 %Such cloud environments offer those who have limited local computational
 %resources a opportunity to run large scale applications.
 Such cloud environments provide the users with virtually unlimited computational
