Update abstract and instoruction

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -30,7 +30,7 @@
 		Tokyo Institute of Technology\\
 		2-12-1-W8-33, Ohokayama,\\
 		Meguro-ku, Tokyo 152-8552 Japan\\
-		\kento{Use titech email address !}
+		\kento{Use titech email address ! } \\
 	Email: belldandyxtq@gmail.com}
 	\and
 	\IEEEauthorblockN{Kento Sato}
@@ -48,15 +48,6 @@
 }
 
 \maketitle
-\kento{
-\begin{itemize}
-  \item Consistency:
-  \begin{itemize}
-  	\item cloud based $\to$ cloud-based 
-  \end{itemize} 
-\end{itemize}
- 
- }
 
 
 %start abstract
