--- a/paper/src/background.tex
+++ b/paper/src/background.tex
@@ -1,6 +1,10 @@
 %to do
 \section{background}
 \label{sec:background}
+\kento{Emphasize (i) several applications have data access locality and (ii)
+the data access workloads can be accelerated by using burst buffers here. So I
+think we should describe ``Data access locality'' first, then burst buffers (+
+network v.s. s3)}
 \begin{comment}
 \subsection{Cloud Computing}
 \begin{figure}
@@ -44,22 +48,40 @@ Cloud computing can have following benefits:
 \label{background:amazon throughput}
 \end{figure}
 
-Many previous research measured the I/O throughput in cloud \cite{Chiba,Transactions_a_la_carte,
-Interactive_Use_of_Cloud_Services,Amazon_S3_for_Science_Grids,anevaluation}, the I/O bandwidth of
-Amazon S3 is much lower than that in HPC system, and the value is quite unstable\cite{anevaluation}.
+\kento{There is no topic sentence in this subsection. Why did you write this
+Subection ? why do you compare  Interconnection Network vs. Shared Storage}
+
+
+Previous studies
+measured the I/O throughputs in clouds \cite{Chiba,Transactions_a_la_carte,
+Interactive_Use_of_Cloud_Services,Amazon_S3_for_Science_Grids, anevaluation},
+the I/O bandwidth of Amazon S3 is much lower than that in HPC system, and the value is quite unstable\cite{anevaluation}.
 Because the Amazon S3 data center is geographically-distributed, and connect via Internet, compare
 to modern parallel file systems Amazon S3 cannot achieve a high throughput.
+\kento{Because you already evaluated S3 performance, I do not think this
+paragraph is necessary. Instead, please use these sentences to support your
+results, and show the results are consistent to evaluations done by others}
  
 However, when we look at interconnection network throughput inside Amazon EC2,
+\kento{What does the ``inside'' mean ? please describe what did you measure}
 Figure.~\ref{background:amazon throughput} shows a comparison of Amazon Interconnection Network
-throughput and Amazon S3 throughput, although we only show the result up to 8 pairs of nodes, each
-node achieved only 135MB/s (1GBit/s), the influence between nodes is extremely small, figure shows a perfect linear line also a strong scalability.
+throughput and Amazon S3 throughput, although we only show the result up to 8 pairs of nodes 
+\kento{Because you did not describe how to measure the performance,
+``pairs'' is not unknown}, each node achieved only 135MB/s (1GBit/s), the
+influence between nodes is extremely small, figure shows a perfect linear line also a strong scalability.
 We measure the interconnection network by using Iperf\cite{iperf}, which was developed by NLANR/DAST
-as a modern alternative for measuring TCP and UDP bandwidth performance.
+as a modern alternative for measuring TCP and UDP bandwidth performance
+\kento{It's too detailed. And Should be mentioned before showing results}.
 When we running the
 benchmark, many other users were also running applications on Amazon, so we can assume that highest
 throughput 1GB/s (8Gbit/s) shown in Figure.~\ref{background:amazon throughput} is not the
-maximum bandwidth of interconnection network in Amazon EC2.
+maximum bandwidth of interconnection network in Amazon EC2 \kento{Why do you
+mention this ? If you want to say ``this results is not trustful because other
+applications were running'', please remove this figure and this subsection.
+Instead, you should mention ``Even with other applications are running, the
+performance is still better than S3'' . But, in fat tree topology, almost peak
+throughput can be achieved even if other applications are running like in
+TSUBAME. So I do not think your expectation is true}.
 As Figure.~\ref{background:amazon throughput} shows, Interconnection Network throughput inside
 Amazon EC2 is proportional to numbers of nodes used, on the contrary, Amazon S3 throughput is much
 lower than it, and unstable.
@@ -69,6 +91,10 @@ access to the same file will be limited by S3 server machine bandwidth, and will
 conflict.
 Our proposal system takes advantage of the characteristic of
 Interconnection network inside cloud system to burst I/O throughput.
+\kento{Please mention ``so what?''. Why did you compare network(interconnection
+network) and storage(S3) ? People will think this comparison is unfair, and no
+meaning unless you mention that. This subsection looks weird to me because this
+section does not have any ``topic sentence'' and ``so what ?'' sentence}
 
 \subsection{Burst Buffer}
 \begin{figure}
@@ -97,8 +123,11 @@ request for the same data can be accessed from burst buffer.
 Furthermore, applications which write a lot also can benefit from burst buffer system, by buffering
 output data in burst buffer, application can go ahead without waiting data be finally write to
 storage.
+\kento{I think we do not need this subsection or we should combine with the
+previous subsection, because there is no new information from the introduction
+section}
 
-\subsection{Data Locality}
+\subsection{Data Access Locality}
 \begin{comment}
 add other kinds of application data locality details.
 as more as possible
@@ -129,6 +158,8 @@ astronomical image.\\
 \label{background:data locality}
 \end{figure}
 
+\kento{There is no topic sentence in this subsection. Why did you write this
+subection ? why do you describe data access locality} 
 Data locality is a phenomenon describing the same value, or related storage locations, being
 frequently accessed.
 Technology like cache, instruction prefetch for memory, or the advanced branch predictor
@@ -140,6 +171,8 @@ mapreduce,\cite{Investigation_of_Data_Locality_in_MapReduce}, scientific
 OLTP\cite{Data_locality_characterization_of_OLTP},
 numeric\cite{Analyzing_data_locality_in_numeric_applications}etc., and showed that these
 applications has a strong data locality.
+\kento{If possible with you, please describe also checkpointing workloads}
+
 Among these applications, work flow applications shows a strongest data locality, in this paper, we
 focus on work flow applications.
 Since our proposal
