updates architecture and implementation

--- a/paper/src/architecture.tex
+++ b/paper/src/architecture.tex
@@ -2,6 +2,8 @@
 \label{sec:architecture}
 \kento{This section need to be totally reorganized. But please resolve my
 comments first}
+\kento{In this section, we need to describe information, which should be
+written in ``Users' manual'', not ``Developers' document''}
 %\begin
 \subsection{Overview}
 \kento{
@@ -17,6 +19,7 @@ comments first}
 \kento{
 \begin{itemize}
   \item How burst buffer start ?
+  \item Mention the current prototype uses main memory. Why ?
   \item How the write operations works (e.g. chaching) ? and Why write
   performance is improved for applications ?
   \begin{itemize}
@@ -29,7 +32,7 @@ comments first}
   	\item If the data is in the buffers, \ldots
   	\item If the data is not in the buffers, \ldots
   \end{itemize}
-  \item Any other things to mention here ??
+  \item Any other things ?
   \item How burst buffers end ? What happens to data in the burst buffers ?
 \end{itemize}
 }
